# turkify

./: .gitignore  CHANGELOG.md  KURULUM.md  LICENSE  PORTABILITY.md  README.md  ROADMAP.md  THIRD-PARTY-NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
config/: config.example.json  protected_words.example.txt  protected_words.txt
docs/: KURULUM.md  PLAN.md  PORTABILITY.md  ROADMAP.md
docs/adr/: 0001-kademeli-hibrit-mimari.md  0002-openai-uyumlu-llm-api.md  0003-native-per-os-gui.md  0004-motor-sinir-protokolu.md  0005-linux-terminal-servis.md  0006-cli-birinci-sinif-kalici.md  0007-ayar-saklama-gui-native.md  0008-korumali-kelimeler-paylasilan-dosya.md  0009-paketleme-frozen-motor.md  README.md
hammerspoon/: turkify.lua
launchd/: com.turkify.daemon.plist
linux/: README.md  install.sh  turkify_fix.py
linux/service/: turkify-reload.path  turkify-reload.service  turkify.service
macos/: Package.swift  README.md
macos/Sources/Turkify/: AppConfig.swift  Corrector.swift  EngineClient.swift  HotKey.swift  (+2 more)
macos/Turkify/: Turkify-Bridging-Header.h
macos/packaging/: README.md  build_all.sh  build_dmg.sh  build_engine.sh  turkify-engine.spec  turkify_engine.py
prompts/: rerank_prompt.txt
raycast/: turkify-duzelt.sh
scripts/: release.sh  set_version.sh
src/turkify/: __init__.py  __main__.py  _yuret.py  agent.py  candidates.py  config.py  deasciifier.py  engine.py  frequency.py  harmony.py  learn.py  morphology.py  protect.py  reconstruct.py  reranker.py  resources.py  sentence_case.py  serve.py  server.py  tokenizer.py
tests/: conftest.py  test_agent.py  test_candidates.py  test_capitalize_protected.py  test_config.py  test_deasciifier.py  test_engine.py  test_engine_tier2.py  test_engine_tier3.py  test_frequency.py  test_harmony.py  test_learn.py  test_main.py  test_morphology.py  test_protect.py  test_reconstruct.py  test_reranker.py  test_sentence_case.py  test_serve.py  test_server.py  test_tier2_logic.py  test_tokenizer.py  test_turkify_fix.py
tools/icons/: generate_icons.py
windows/: README.md
windows/Turkify/: App.xaml  App.xaml.cs  AppSettings.cs  AppState.cs  Clipboard.cs  Corrector.cs  EngineClient.cs  HotKey.cs  Log.cs  MainWindow.xaml  MainWindow.xaml.cs  ModelDiscovery.cs  ThemeManager.cs  Turkify.csproj
windows/packaging/: README.md  build_all.ps1  build_app.ps1  build_engine.ps1  turkify-engine.spec  turkify.iss  turkify_engine.py
(+16 files in other folders)
