[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turkify"
version = "0.1.0"
description = "Tamamen lokal Türkçe diakritik (şapka) restorasyon sistemi"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Natural Language :: Turkish",
]
dependencies = []

[project.optional-dependencies]
# Tier 2 morfolojik doğrulama (Faz 2). Kurulu değilse Tier 2 sessizce atlanır
# ve sistem Faz 1 deterministik davranışını korur.
morphology = ["zeyrek>=0.1.3"]

[tool.setuptools.packages.find]
where = ["src"]

# Pakete gömülü veri dosyaları (frekans listesi, rerank prompt'u). Wheel'e dahil
# edilir; importlib.resources ile okunur (bkz. ADR 0009).
[tool.setuptools.package-data]
turkify = ["data/*.txt", "prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
